fix mcq option alignment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -926,7 +926,6 @@ $grayMediumLight: #eaeaea;
 
 .checkbox-text div {
   display: inline-table;
-  width: 90%;
   padding-left: 5px;
 }
 
